--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Admin | PeachMusic</title>
 
+    <link rel="stylesheet" th:href="@{/css/design-system.css}">
     <link rel="stylesheet" th:href="@{/css/layout.css}">
     <link rel="stylesheet" th:href="@{/css/admin.css}">
 
