♻ refactor: index 인기차트 수정

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>PeachMusic</title>
@@ -27,6 +27,9 @@
             <div class="section-title">인기 차트</div>
             <div id="rankingList" class="rank-list"></div>
         </div>
+
+        <!-- ✅ 메인 미리보기용 오디오 -->
+        <audio id="previewAudio" style="display:none"></audio>
 
     </section>
 
