✨ feat: 재생바 연동

--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -36,7 +36,7 @@
     align-items: center;
     justify-content: center;
 
-    font-size: var(--font-body);
+    font-size: var(--font-md);
     font-weight: 900;
 
     text-decoration: none;
