--- a/src/main/resources/templates/fragments/player.html
+++ b/src/main/resources/templates/fragments/player.html
@@ -1,15 +1,31 @@
 <div class="player" th:fragment="player">
 
-    <div class="controls">
-        <button>⏮</button>
-        <button>▶</button>
-        <button>⏭</button>
+    <!-- 실제 오디오 -->
+    <audio id="audioPlayer" preload="metadata"></audio>
+
+    <!-- 앨범 -->
+    <div class="album-cover" id="playerCover">🎵</div>
+
+    <!-- 곡 정보 -->
+    <div class="song-info">
+        <div id="playerTitle">재생 중인 곡 없음</div>
+
+        <div class="progress-wrapper">
+            <span id="currentTime">0:00</span>
+
+            <div class="progress-bar" id="progressBar">
+                <div class="progress-fill" id="progressFill"></div>
+            </div>
+
+            <span id="duration">0:00</span>
+        </div>
     </div>
 
-    <div class="album-cover">🎵</div>
-
-    <div class="song-info">
-        재생 중인 곡 없음
+    <!-- 컨트롤 -->
+    <div class="controls">
+        <button id="prevBtn" type="button">⏮</button>
+        <button id="playBtn" type="button">▶</button>
+        <button id="nextBtn" type="button">⏭</button>
     </div>
 
 </div>
