--- a/src/main/resources/templates/song/song-detail.html
+++ b/src/main/resources/templates/song/song-detail.html
@@ -61,16 +61,8 @@
                 <div class="chips" id="genreChips"></div>
 
                 <div class="custom-player">
-                    <button id="playBtn" class="play-btn">▶</button>
-
-                    <div class="progress-area">
-                        <span id="currentTime">0:00</span>
-                        <input type="range" id="progressBar" value="0" min="0" step="1">
-                        <span id="durationTime">0:00</span>
-                    </div>
+                    <button id="detailPlayBtn" class="play-btn">▶</button>
                 </div>
-
-                <audio id="audioPlayer" preload="metadata"></audio>
 
             </div>
 
